# earnapp-data-fetcher

./: main.py  pyproject.toml
